Fixed some imaging as well as font colors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="card">
         <img class="avatar" id="shengale-avatar" src="alexpfp.JPG" alt="Alex Sheng" />
         <h1>Alex Sheng</h1>
-        <h2>Media and Information Major</h2>
+        <h2>Information Technology Specialist</h2>
         <ul class="contacts">
             <li><a href=""><img src="linkedinicon.JPG"alt="Linkedin"></a></li>
             <li><a href=""><img src="githubicon.JPG"alt="Github"></a></li>
