Added contact information box

--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
     <p class="AS"><em>OBI-WAN picks up Anakin's light saber and begins to walk away. He stops and looks back.</em></p>
         
     <div class="speaking-scene-new">
-        <div class="box1"><span>ANAKIN: I hate you!</span></div>
+        <div class="box1">
+            <span>Contact Information</span><br>
+            <span>Email: Alexsheng118@gmail.com</span><br>
+            <span>Address: 530 Highlands Dr.</span><br>
+            <span>Canton, MI. 48188</span><br>
+        </div>
         <div class="box2"><span>OBI-WAN: You were my brother, Anakin. I loved you.</span></div>
         <div class="box3"><img id="AnakinHate" src="AnakinHate.JPG" alt="I Hate You"></div>
         <div class="box4"><img id="ObiBro" src="ObiBro.JPG" alt="I loved you"></div>
