Line break fixes

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         
     <div class="speaking-scene-new">
         <div class="box1">
-            <span>Contact Information</span><br>
-            <span>Email: Alexsheng118@gmail.com</span><br>
-            <span>Address: 530 Highlands Dr.</span><br>
-            <span>Canton, MI. 48188</span><br>
+            <p>Contact Information</p><br>
+            <p>Email: Alexsheng118@gmail.com</p><br>
+            <p>Address: 530 Highlands Dr.</p><br>
+            <p>Canton, MI. 48188</p><br>
         </div>
         <div class="box2"><span>OBI-WAN: You were my brother, Anakin. I loved you.</span></div>
         <div class="box3"><img id="AnakinHate" src="AnakinHate.JPG" alt="I Hate You"></div>
