--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p>Address: 530 Highlands Dr.</p><br>
             <p>Canton, MI. 48188</p><br>
         </div>
-        <div class="box2"><span>OBI-WAN: You were my brother, Anakin. I loved you.</span></div>
+        <div class="box2"><span>Contact Information: Email: Alexsheng118. Address: 530 Highlands Dr. Canton, MI. 48188</span></div>
         <div class="box3"><img id="AnakinHate" src="AnakinHate.JPG" alt="I Hate You"></div>
         <div class="box4"><img id="ObiBro" src="ObiBro.JPG" alt="I loved you"></div>
     </div>
