--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@
         
     <div class="speaking-scene-new">
         <div class="box1">
-            <p>Contact Information</p><br>
-            <p>Email: Alexsheng118@gmail.com</p><br>
-            <p>Address: 530 Highlands Dr.</p><br>
-            <p>Canton, MI. 48188</p><br>
+            <p>Contact Information<br>
+            Email: Alexsheng118@gmail.com<br>
+            Address: 530 Highlands Dr.<br>
+            Canton, MI. 48188</p><br>
         </div>
-        <div class="box2"><span>Contact Information: Email: Alexsheng118. Address: 530 Highlands Dr. Canton, MI. 48188</span></div>
+        <div class="box2"><span>Contact Information: 
+            Email: Alexsheng118. 
+            Address: 530 Highlands Dr. 
+            Canton, MI. 48188</span></div>
         <div class="box3"><img id="AnakinHate" src="AnakinHate.JPG" alt="I Hate You"></div>
         <div class="box4"><img id="ObiBro" src="ObiBro.JPG" alt="I loved you"></div>
     </div>
