Added more resume elements

--- a/index.html
+++ b/index.html
@@ -18,16 +18,13 @@
         </ul>
     </div>
 
-    <p class="AS"><em>ANAKIN and OBI-WAN confront each other on the lava river.</em></p>
+    <p class="AS"><em>Objective</em></p>
     <ul class="speaking-scene">
-        <li>ANAKIN: I should have known the Jedi were plotting to take over . . .</li>
-        <li>OBI-WAN: From the Sith!!! Anakin, Chancellor Palpatine is evil.</li>
-        <li>ANAKIN: From the Jedi point of view! From my point of view, the Jedi are evil.</li>
-        <li>OBI-WAN: Well, then you are lost!</li>
-        <li>ANAKIN: This is the end for you, My Master. I wish it were otherwise.</li>
+        <p>Results-oriented and self-motivated Media and Information Systems Senior with strong analytical and problem-solving skills seeking an IT Analyst opportunity in Manufacturing or Health industries.<br> 
+        Extensive hands-on experience in service desk operations, gaming software development, and IT projects support.</p>
     </ul>
         
-    <p class="AS"><em>ANAKIN jumps and flips onto OBI- WAN's platform. The fighting continues again until OBI-WAN jumps toward the safety of the black sandy edge of the lava river. He yells at Anakin. </em></p>
+    <p class="AS"><em>Education & Technical Skills</em></p>
         
     <ul class="speaking-scene">
         <li>OBI-WAN: It's over, Anakin. I have the high ground.</li>
