Re Formatted grids, changed padding and margins

--- a/index.html
+++ b/index.html
@@ -24,16 +24,20 @@
         Extensive hands-on experience in service desk operations, gaming software development, and IT projects support.</p>
     </ul>
 
+    <p><i><em>Key Courses:</em></i></p>
     <div class="courses-ordered">
-        <li><i><em>Key Courses:</em></i></li>
         <div class="list1">
             <p>Discrete Structures in Computer Science<br>
             Computer Organization and Architecture<br>
             Intro to Programming I & II</p><br>
         </div>
-        <div class="list2"><p>Advanced Game Development,<br>
+        <div class="list2"><p>Advanced Game Development<br>
             Game and Interactive Media Development<br>
             Media and Information I & II</p><br>
+        </div>
+        <div class="list3"><p>Evaluating Human-Centered Technology<br>
+            Game Music Theory<br>
+            Web Design & Development</p><br>
         </div>
     </div>
         
