First Rough Draft of portfolio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <p class="AS"><em>Education & Technical Skills</em></p>
     <ul class="speaking-scene">
-        <p>Michigan State University. <i>August 2016 - Current </i><br>
+        <p>Michigan State University. <i>(August 2016 - Current)</i><br>
         Senior - Major in Media and Information, Focus in Game Design and Information Technology<br></p>
     </ul>
 
@@ -49,9 +49,34 @@
         
     <p class="AS"><em>Professional Experience</em></p>
     <ul class="speaking-scene">
-        <p><i><em>Michigan State University - Service Desk IT Specialist (May 2019 - Current)</em></i></p>
+        <p><em>Michigan State University - Service Desk IT Specialist</em><i>(May 2019 - Current)</i></p>
         <li>Investigated and solved day-to-day incidents and requests tickets for users in the Educational department, such as faulty hardware, poor network connections, and security access to university programs</li>
         <li>Planned and implemented Windows 10 Upgrade for over 100 different users in the Education department. This included migrating and preserving user data as well as providing new software upgrades.</li>
+    </ul>
+
+    <ul class="speaking-scene">
+        <p><em>Michigan Medicine, Web Developer Internship</em><i>(May 2018 - August 2018)</i></p>
+        <li>Responsible for building a private website for the Michigan Medicine Revenue Cycle division. Used HTML and CSS styling to enhance the user interface and key capabilities to improve ease of use of the website</li>
+        <li>In charge of acquiring user feedback and learning new skills and languages such as HTML and Google’s web design interface to solve the challenges of creating an integrated website.</li>
+    </ul>
+
+    <ul class="speaking-scene">
+        <p><em>Michigan Medicine, Billing Clerk Internship</em><i>(June 2017 – August 2017)</i></p>
+        <li>Responsible for accurate claim submission, timely charge, and payment application. Apply state of the art Health Care Software (EPIC) to resolve complex insurance inquiries, reimbursement issues, and requirements compliance</li>
+    </ul>
+
+    <p class="AS"><em>Leadership Experience</em></p>
+    <ul class="speaking-scene">
+        <p><em>MSU Fortnite Club, Founder and President</em><i>(September 2018 - June 2020)</i></p>
+        <li>Established MSU Fortnite Club from scratch and recruited over 40 members</li>
+        <li>Lead a team of 8 Board members to create and manage competitions as well as day-to-day activities for the club</li>
+    </ul>
+
+    <ul class="speaking-scene">
+        <p><em>Michigan State eSports, Board Member and Manager</em><i>(September 2017 - June 2020)</i></p>
+        <li>Setup and organize online and local competitions between hundreds of students at Michigan State and out of state for each of their respective game clubs. Plan and manage multiple clubs’ future events held in and out of Michigan State</li>
+        <li>Team Manager of the entire Rainbow 6 division under Michigan State eSports</li>
+        <li>Apart of the Collegiate Rainbow 6 League which holds competitive seasons with over 120 universities nationally</li>
     </ul>
         
     <div class="speaking-scene-new">
