Draft 2, Adding image sources chagned colors

--- a/index.html
+++ b/index.html
@@ -87,9 +87,12 @@
             Canton, MI. 48188</p><br>
         </div>
         <div class="box2"><span>Image Sources: 
-            Email: Alexsheng118. 
-            Address: 530 Highlands Dr. 
-            Canton, MI. 48188</span></div>
+            <p><a href="https://www.flaticon.com/free-icon/linkedin_174857">Linkedin Icon</a><br>
+                <a href="https://www.somagnews.com/github-key-features-now-free-users/">Github Icon</a>
+                <a href="https://www.flaticon.com/free-icon/gmail_281769">Gmail Icon</a>
+            </p>
+
+            </div>
     </div>
 
 </body>
