Final Draft Of Portfolio, Fixed color and formatting, changed some wording

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Alex Sheng</h1>
         <h2>Information Technology Specialist</h2>
         <ul class="contacts">
-            <li><a href=""><img src="linkedinicon.JPG"alt="Linkedin"></a></li>
-            <li><a href=""><img src="githubicon.JPG"alt="Github"></a></li>
-            <li><a href=""><img src="gmailicon.JPG"alt="Email"></a></li>
+            <li><a href="https://www.linkedin.com/in/alex-sheng/"><img src="linkedinicon.JPG"alt="Linkedin"></a></li>
+            <li><a href="https://github.com/shengale"><img src="githubicon.JPG"alt="Github"></a></li>
+            <li><a href="https://www.youtube.com/user/blad406/"><img src="gmailicon.JPG"alt="Email"></a></li>
         </ul>
     </div>
 
@@ -86,10 +86,11 @@
             Address: 530 Highlands Dr.<br>
             Canton, MI. 48188</p><br>
         </div>
-        <div class="box2"><span>Image Sources: 
-            <p><a href="https://www.flaticon.com/free-icon/linkedin_174857">Linkedin Icon</a><br>
-                <a href="https://www.somagnews.com/github-key-features-now-free-users/">Github Icon</a>
-                <a href="https://www.flaticon.com/free-icon/gmail_281769">Gmail Icon</a>
+        <div class="box2">
+            <p>Image Sources:<br>
+                <a href="https://www.flaticon.com/free-icon/linkedin_174857">Linkedin Icon</a><br>
+                <a href="https://www.somagnews.com/github-key-features-now-free-users/">Github Icon</a><br>
+                <a href="https://www.flaticon.com/free-icon/gmail_281769">Gmail Icon</a><br>
             </p>
 
             </div>
